--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.ntnu.idi.bidata</groupId>
-    <!-- TODO: Change the artifact ID to fit with your project -->
 
-    <artifactId>--Redacted---Mappe-Template</artifactId>
+    <artifactId>kitchen-manager-STK2024IDATG</artifactId>
+
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -16,5 +16,19 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
