Redacted using filter-repo

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 
-    <groupId>edu.ntnu.idi.bidata</groupId>
+    <groupId>redacted-id</groupId>
 
     <artifactId>kitchen-manager-STK2024IDATG</artifactId>
 
